--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "formik": "^2.4.6",
     "konva": "^9.3.11",
     "lucide-react": "^0.377.0",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -48,7 +48,9 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
