--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-image-gallery": "^1.3.0",
@@ -48,9 +50,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
